--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
 <% end %>
 
 <div class="box wide">
-  <% if @showing_user.is_active? %>
+  <% if false && @showing_user.is_active? %>
     <div id="gravatar">
       <%= avatar_img(@showing_user, 100) %>
     </div>
