--- a/app/views/signup/invited.html.erb
+++ b/app/views/signup/invited.html.erb
@@ -30,9 +30,11 @@
 
     <%= f.label :email, "E-mail Address:", :class => "required" %>
     <%= f.email_field :email, :size => 30 %>
+    <% if false %>
     <span class="hint">
       <a href="http://www.gravatar.com/" target="_blank">Gravatar</a>'ized
     </span>
+    <% end %>
     <br />
 
     <%= f.label :password, "Password:", :class => "required" %>
