--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -35,9 +35,7 @@
       <% else %>
         <p>
         Not a user yet?
-        Read about <a href="/about#invitations">how invitations work</a> and see if you know
-        <a href="/u">a current user</a> of the site.
-        The <a href="/chat">chat room</a> does not require an invitation.
+        Read about <a href="/about">how invitations work</a>.
         </p>
       <% end %>
 
