--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -123,5 +123,13 @@
     <%= link_to 'Moderation Log', moderations_path %>
   </footer>
   <span id="iab-pcm-sdk"></span><span id="iab-autofill-sdk"></span>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XJ2ZHDL7LE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-XJ2ZHDL7LE');
+</script>
 </body>
 </html>
