--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -4,10 +4,7 @@
 
 <h2>New users by month</h2>
 <p>
-Outliers:
-2013-12 is the <a href="https://lobste.rs/s/orfht1/invitation_queue">invitation queue</a>;
-2017-01 is the <a href="https://lobste.rs/s/kmj9w9/invitation_pledge_drive">pledge drive</a>
-(<a href="https://lobste.rs/s/2scxd0/invitation_pledge_drive_results">results</a>)
+DTO 始于 <a href="https://dto.pipecraft.net/s/vj6w6d/about_dto">2022 年 11 月 11 日</a>。
 </p>
 <%= raw @users_graph %>
 
