--- a/app/views/stories/_subnav.html.erb
+++ b/app/views/stories/_subnav.html.erb
@@ -1,4 +1,6 @@
 <% content_for :subnav do %>
-  <%= link_to_different_page 'Newest', newest_path %>
-  <%= link_to_different_page 'Top', top_path %>
+  <%= link_to_different_page 'Week', top_path %>
+  <%= link_to_different_page 'Month', '/top/month' %>
+  <%= link_to_different_page 'Year', '/top/year' %>
+  <%= link_to_different_page 'Infinity', '/top/infinity' %>
 <% end %>
