--- a/app/views/messages/_subnav.html.erb
+++ b/app/views/messages/_subnav.html.erb
@@ -3,7 +3,7 @@
   <%= link_to_different_page('All',      replies_path) %>
   <%= link_to_different_page('Comments', replies_comments_path) %>
   <%= link_to_different_page('Stories',  replies_stories_path) %>
-  |
+  <span>|</span>
   <%= link_to_different_page 'Messages', messages_path %>
   <%= link_to_different_page 'Sent', messages_sent_path %>
 <% end %>
