--- a/app/views/mod/_subnav.html.erb
+++ b/app/views/mod/_subnav.html.erb
@@ -2,7 +2,7 @@
   <style> header#subnav a { margin: 0 0.25rem 0 0; } </style>
   <%= link_to_different_page 'Dashboard', mod_path %>
   <%= link_to_different_page 'Notes', mod_notes_path(period: '2w') %>
-  F-Stories: <% @periods.each do |p| %><%= link_to_different_page(p, mod_flagged_stories_path(period: p)) %> <% end %>
-  F-Comments: <% @periods.each do |p| %><%= link_to_different_page(p, mod_flagged_comments_path(period: p)) %> <% end %>
-Commenters: <% %w{1m 2m 3m 6m}.each do |p| %><%= link_to_different_page(p, mod_commenters_path(period: p)) %> <% end %>
+  <span>F-Stories:</span> <% @periods.each do |p| %><%= link_to_different_page(p, mod_flagged_stories_path(period: p)) %> <% end %>
+  <span>F-Comments:</span> <% @periods.each do |p| %><%= link_to_different_page(p, mod_flagged_comments_path(period: p)) %> <% end %>
+  <span>Commenters:</span> <% %w{1m 2m 3m 6m}.each do |p| %><%= link_to_different_page(p, mod_commenters_path(period: p)) %> <% end %>
 <% end %>
