--- a/app/views/stories/_similar.html.erb
+++ b/app/views/stories/_similar.html.erb
@@ -3,7 +3,7 @@
     <li>
       <a href="<%= story.url %>" target="_blank"><%= story.title %></a>
       <%= story.user_is_author? ? "authored by" : "via" %>
-      <a href="/u/<%= story.user.username %>" class="<%= story.html_class_for_user %>"><%= story.user.username %></a>
+      <a href="/u/<%= story.user.username %>" class="u-author <%= story.html_class_for_user %>"><%= story.user.username %></a>
       <%= time_ago_in_words_label(story.created_at) %>
       <span>
         |
