[DTO] Add RSS link and mailbrew box

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -139,7 +139,17 @@
     <% end %>
     <%= link_to 'Filter', filters_path %>
     <%= link_to 'Moderation Log', moderations_path %>
+    <a href="/s/8enlvn/dto_rss_feed">RSS</a>
   </footer>
+  <div style="display:flex; justify-content: end;">
+    <iframe
+      title="DTO Morning Brew Subscribe Form"
+      style="width:360px;height:78px;background:transparent;border-radius:6px;position:relative;overflow:hidden;border:none"
+      allowtransparency="true"
+      loading="lazy"
+      src="https://embed.mailbrew.com/?id=64fHY7FZzol6&showUser=false&showTitle=false&showPoweredBy=false&cta=%E8%AE%A2%E9%98%85&buttonColor=%23f75858&backgroundColor=transparent&textColor=%23262629&invertWithDarkMode=true">
+    </iframe>
+  </div>
   <span id="iab-pcm-sdk"></span><span id="iab-autofill-sdk"></span>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XJ2ZHDL7LE"></script>
 <script>
