[DTO] Apply umami

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -140,6 +140,7 @@
     <%= link_to 'Filter', filters_path %>
     <%= link_to 'Moderation Log', moderations_path %>
     <a href="/s/8enlvn/dto_rss_feed">RSS</a>
+    <a href="https://visitors.pipecraft.net/share/JPriIeYV/dto.pipecraft.net" target="_blank">Visitors</a>
   </footer>
   <div style="display:flex; justify-content: end;">
     <iframe
@@ -151,7 +152,8 @@
     </iframe>
   </div>
   <span id="iab-pcm-sdk"></span><span id="iab-autofill-sdk"></span>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XJ2ZHDL7LE"></script>
+<script async defer data-website-id="9f1c5bfd-6011-4cb4-8f3c-f138544c990a" src="https://visitors.pipecraft.net/script.js"></script>
+<script async defer src="https://www.googletagmanager.com/gtag/js?id=G-XJ2ZHDL7LE"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag() { dataLayer.push(arguments); }
